k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: icndb-app
  labels:
    app: icndb-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: icndb-app
  template:
    metadata:
      labels:
        app: icndb-app
    spec:
      containers:
        - name: icndb-server
          image: nikhilvep/icndb-app:ver-2
          args:
            - "--name"
            - "Rajnikanth"
          ports:
            - containerPort: 8000
