k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: icndb-service
spec:
  type: NodePort
  selector:
    app: icndb-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
